# cpp-snake

./: CMakeLists.txt  GameState.h  Globals.h  MainMenu.hpp  Makefile  README.md  main.cpp
inc/: Constants.h  GameState.h  Globals.h  Snake.h
inc/menu/: GameoverMenu.h  MainMenu.h
inc/util/: iterable_queue.hpp  sfml_addon.h
src/: Snake.cpp  main.cpp
src/menu/: GameoverMenu.cpp  MainMenu.cpp
src/util/: sfml_addon.cpp
